Clean Up + Fix
CSS and JS clean up
Added a temporary fix for the beer-containers not showing when
refreshing the page above that div

--- a/hops/css/import/_layout.sass
+++ b/hops/css/import/_layout.sass
@@ -5,7 +5,6 @@ $b-bg: #191B1F
 $y: #edc356
 $r: #cd4949
 $g: #878373
-$end: #0e0f11
 $font: #7f838c
 
 body
