--- a/hops/css/import/_menu.sass
+++ b/hops/css/import/_menu.sass
@@ -135,6 +135,6 @@
           position: absolute
           top: 0
           right: 0
-          bottom: -4px
+          bottom: -5px
           left: 0
           border-bottom: 2px solid $y
