--- a/hops/css/import/_sections.sass
+++ b/hops/css/import/_sections.sass
@@ -3,32 +3,30 @@ img
 
 #hero
   width: 100%
-  height: 450px
+  height: 460px
   background:
     color: $b-bg
     position: center center
-    repeat: no-repeat
     size: cover
   padding-top: 1px
   text-align: center
-  color: $w
   position: relative
   overflow: hidden
   margin-top: 54px
 
   h1
     font-size: 60px
-    transform: rotate(-3deg)
-    padding: 10px 20px
-    margin: 0
-    background: $w
     color: $b-bg
+    margin: 0
+    padding: 10px 20px
+    background: $w
+    transform: rotate(-3deg)
     box-shadow: 0px 0px 50px rgba(0,0,0,0.6)
 
   h2
-    color: $w
     font-size: 34px
-    margin: 24px 0
+    color: $w
+    margin: 26px 0
     display: inline-block
     vertical-align: middle
     text-shadow: 0px 0px 30px rgba(0,0,0,0.8)
@@ -45,17 +43,17 @@ img
 .vertically-center
   position: absolute
   margin: auto
-  top: 50%
+  top: 56%
   left: 50%
   transform: translate(-50%,-50%)
-  width: 88%
+  width: 90%
 
 @media (min-width: 40.0625em)
   #hero
-    height: 600px
+    height: 580px
 
     h1
-      font-size: 90px
+      font-size: 94px
       padding: 20px 40px
 
     h2
@@ -63,7 +61,7 @@ img
 
 @media (min-width: 64.0625em)
   #hero
-    height: 800px
+    height: 700px
     margin-top: 0
 
     svg
@@ -73,7 +71,6 @@ img
 
   .vertically-center
     max-width: 800px
-
 
 // Beers
 
@@ -90,9 +87,6 @@ img
   .beer-num
     background: $color
 
-.beer-bg
-  background: $w
-
 #beer
   padding: 60px 0
   text-align: center
@@ -105,7 +99,7 @@ img
     text-transform: uppercase
     position: relative
 
-  h2, h4
+  h2
     font-size: 54px
     margin-bottom: 6px
 
@@ -117,30 +111,30 @@ img
     transform: translate(30px, 0)
     transition: all 0.5s ease-in-out
 
-  p
-    font-size: 14px
-    text-align: center
-    padding: 0 12px
-    line-height: 20px
-    overflow: hidden
-    color: $w
-
-  .beer-num
-    position: relative
+  .beer-container
     display: inline-block
-    width: 40px
-    height: 40px
-    top: 8px
-    border-radius: 5px
-    background: #e9e9e9
-    transform: scale(2)
-    transition: all 0.4s ease-in-out
+    width: 270px
+    margin: 6% 0
+    opacity: 0
+    transform: translate(20px, 0)
+    transition: all 0.3s ease-in-out
+    padding: 1%
 
-    h2
-      color: $w
-      z-index: 2
-      font-size: 28px
-      top: 3px
+    .beer-num
+      position: relative
+      display: inline-block
+      width: 40px
+      height: 40px
+      top: 8px
+      border-radius: 5px
+      background: #e9e9e9
+      transform: scale(2)
+      transition: all 0.4s ease-in-out
+
+      h2
+        color: $w
+        font-size: 28px
+        top: 3px
 
   .red
     @include beer-type($r)
@@ -151,29 +145,20 @@ img
   .dark
     @include beer-type($g)
 
-  .beer-container
-    display: inline-block
-    width: 270px
-    margin: 7% 1%
-    opacity: 0
-    transform: translate(20px, 0)
-    transition: all 0.3s ease-in-out
-    padding: 2%
-
-    .info
+    //.info
       margin-top: 20px
       transform: translate(80px, 0)
       transition: all 0.5s ease-in-out
 
-      .info-inline
+      //.info-inline
         display: inline-block
 
-      p
+      //p
         font-size: 20px
         height: auto
         margin: 0
 
-        span
+        //span
           font-size: 12px
 
   .show
@@ -197,14 +182,15 @@ img
           float: left
 
     .beer-container
-      margin: 2% 1%
+      margin: 4% 0
 
 @media (min-width: 64.0625em)
   #beer
-    padding: 140px 0
+    padding: 120px 0
 
     .beer-container
       width: 300px
+      margin: 2%
 
     .column
       &:nth-child(odd), &:nth-child(even)
@@ -222,14 +208,12 @@ img
 
 #instafeed
   text-align: center
-  background: $w
 
   img
     width: 50%
 
 @media (min-width: 64.0625em)
   #instafeed
-
     img
       width: 25%
 
@@ -300,4 +284,4 @@ img
 
 #end
   height: 50px
-  background: $end
+  background: $b-bg
