--- a/hops/css/main.css
+++ b/hops/css/main.css
@@ -615,7 +615,7 @@ h1 span {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: -4px;
+    bottom: -5px;
     left: 0;
     border-bottom: 2px solid #edc356;
   }
@@ -627,14 +627,12 @@ img {
 
 #hero {
   width: 100%;
-  height: 450px;
+  height: 460px;
   background-color: #191B1F;
   background-position: center center;
-  background-repeat: no-repeat;
   background-size: cover;
   padding-top: 1px;
   text-align: center;
-  color: #f6f6f6;
   position: relative;
   overflow: hidden;
   margin-top: 54px;
@@ -642,20 +640,20 @@ img {
 
 #hero h1 {
   font-size: 60px;
+  color: #191B1F;
+  margin: 0;
+  padding: 10px 20px;
+  background: #f6f6f6;
   -webkit-transform: rotate(-3deg);
       -ms-transform: rotate(-3deg);
           transform: rotate(-3deg);
-  padding: 10px 20px;
-  margin: 0;
-  background: #f6f6f6;
-  color: #191B1F;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.6);
 }
 
 #hero h2 {
-  color: #f6f6f6;
   font-size: 34px;
-  margin: 24px 0;
+  color: #f6f6f6;
+  margin: 26px 0;
   display: inline-block;
   vertical-align: middle;
   text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
@@ -675,20 +673,20 @@ img {
 .vertically-center {
   position: absolute;
   margin: auto;
-  top: 50%;
+  top: 56%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 88%;
+  width: 90%;
 }
 
 @media (min-width: 40.0625em) {
   #hero {
-    height: 600px;
+    height: 580px;
   }
   #hero h1 {
-    font-size: 90px;
+    font-size: 94px;
     padding: 20px 40px;
   }
   #hero h2 {
@@ -698,7 +696,7 @@ img {
 
 @media (min-width: 64.0625em) {
   #hero {
-    height: 800px;
+    height: 700px;
     margin-top: 0;
   }
   #hero svg {
@@ -709,10 +707,6 @@ img {
   .vertically-center {
     max-width: 800px;
   }
-}
-
-.beer-bg {
-  background: #f6f6f6;
 }
 
 #beer {
@@ -730,7 +724,7 @@ img {
   position: relative;
 }
 
-#beer h2, #beer h4 {
+#beer h2 {
   font-size: 54px;
   margin-bottom: 6px;
 }
@@ -747,16 +741,20 @@ img {
           transition: all 0.5s ease-in-out;
 }
 
-#beer p {
-  font-size: 14px;
-  text-align: center;
-  padding: 0 12px;
-  line-height: 20px;
-  overflow: hidden;
-  color: #f6f6f6;
+#beer .beer-container {
+  display: inline-block;
+  width: 270px;
+  margin: 6% 0;
+  opacity: 0;
+  -webkit-transform: translate(20px, 0);
+      -ms-transform: translate(20px, 0);
+          transform: translate(20px, 0);
+  -webkit-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out;
+  padding: 1%;
 }
 
-#beer .beer-num {
+#beer .beer-container .beer-num {
   position: relative;
   display: inline-block;
   width: 40px;
@@ -771,9 +769,8 @@ img {
           transition: all 0.4s ease-in-out;
 }
 
-#beer .beer-num h2 {
+#beer .beer-container .beer-num h2 {
   color: #f6f6f6;
-  z-index: 2;
   font-size: 28px;
   top: 3px;
 }
@@ -820,42 +817,6 @@ img {
   background: #878373;
 }
 
-#beer .beer-container {
-  display: inline-block;
-  width: 270px;
-  margin: 7% 1%;
-  opacity: 0;
-  -webkit-transform: translate(20px, 0);
-      -ms-transform: translate(20px, 0);
-          transform: translate(20px, 0);
-  -webkit-transition: all 0.3s ease-in-out;
-          transition: all 0.3s ease-in-out;
-  padding: 2%;
-}
-
-#beer .beer-container .info {
-  margin-top: 20px;
-  -webkit-transform: translate(80px, 0);
-      -ms-transform: translate(80px, 0);
-          transform: translate(80px, 0);
-  -webkit-transition: all 0.5s ease-in-out;
-          transition: all 0.5s ease-in-out;
-}
-
-#beer .beer-container .info .info-inline {
-  display: inline-block;
-}
-
-#beer .beer-container .info p {
-  font-size: 20px;
-  height: auto;
-  margin: 0;
-}
-
-#beer .beer-container .info p span {
-  font-size: 12px;
-}
-
 #beer .show {
   opacity: 1;
   -webkit-transform: translate(0, 0);
@@ -883,16 +844,17 @@ img {
     float: left;
   }
   #beer .beer-container {
-    margin: 2% 1%;
+    margin: 4% 0;
   }
 }
 
 @media (min-width: 64.0625em) {
   #beer {
-    padding: 140px 0;
+    padding: 120px 0;
   }
   #beer .beer-container {
     width: 300px;
+    margin: 2%;
   }
   #beer .column:nth-child(odd) .beer-container, #beer .column:nth-child(even) .beer-container {
     float: none;
@@ -910,7 +872,6 @@ img {
 
 #instafeed {
   text-align: center;
-  background: #f6f6f6;
 }
 
 #instafeed img {
@@ -999,5 +960,5 @@ img {
 
 #end {
   height: 50px;
-  background: #0e0f11;
+  background: #191B1F;
 }
